# Setup

./: .gitignore  Architecture.txt  DatabaseSchema.txt  MVPBuildPlan.txt  Makefile  ProductSpec.txt  README.md  Roadmap.txt  UIDesignSystem.txt  Vision.txt  render.yaml.example
backend/: .env.example  alembic.ini  requirements.txt
docs/: M1-foundation.md  action-queue.md  advanced-demo-strategy.md  ci-ingestion.md  demo-walkthrough.md  deployment-readiness.md  empty-state-actions.md  evidence-repair-flows.md  home-workbench.md  render-backend.md  render-deployment.md  roles-and-permissions.md  sdk-python.md  strategy-lifecycle.md  vercel-frontend.md  web-evidence-upload.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
marketing-video/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
sample_bundles/: spy_trend.json
scripts/: backend_migrate.sh  backend_start.sh  flush_qf_buffer.sh  frontend_build.sh  frontend_preview.sh  ingest_evidence_bundle.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: aapl_mean_reversion_bundle.py  bundle.json  ci_bundle.json  ci_ingest.py  pandas_usage.py  paper_shadow_demo.py  quickstart.py  quickstart_notebook_demo.py  research_workflow_aapl.py
sdk/python/quantfidelity/: __init__.py  buffer.py  bundle.py  cli.py  client.py  dataframe.py  exceptions.py  handle.py  types.py  workflow.py
sdk/python/tests/: test_bundle.py  test_ci_recipes_m42.py  test_cli.py  test_client.py  test_handle_m89.py  test_pandas_m26.py  test_reliability_m25.py
(+495 files in other folders)
